--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinc/assets-middleware",
-  "version": "1.0.1",
+  "version": "1.1.0-beta.1",
   "description": "A PSR-15 middleware to server static assets (CSS, JS, images, etc.)",
   "homepage": "https://github.com/CodeIncHQ/AssetsMiddleware",
   "type": "library",
@@ -11,7 +11,9 @@
     "psr/http-server-middleware": "^1.0",
     "psr/http-server-handler": "^1.0",
     "micheh/psr7-cache": "^0.5.0",
-    "codeinc/psr7-responses": "^1.2"
+    "codeinc/psr7-responses": "^1.2",
+    "matthiasmullie/minify": "^1.3",
+    "codeinc/media-types": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
