--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.1",
+    "ext-gettext": "*",
     "psr/http-message": "^1.0",
     "psr/http-server-middleware": "^1.0",
     "psr/http-server-handler": "^1.0",
@@ -14,7 +15,8 @@
     "codeinc/psr7-responses": "^1.2",
     "matthiasmullie/minify": "^1.3",
     "codeinc/media-types": "^1.0",
-    "enshrined/svg-sanitize": "^0.8.2"
+    "enshrined/svg-sanitize": "^0.8.2",
+    "zendframework/zend-validator": "^2.10"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
