--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "codeinc/psr7-responses": "^1.2",
     "matthiasmullie/minify": "^1.3",
     "codeinc/media-types": "^1.0",
-    "enshrined/svg-sanitize": "^0.8.2",
-    "zendframework/zend-validator": "^2.10"
+    "enshrined/svg-sanitize": "^0.8.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^7",
